[gd_scene load_steps=5 format=3 uid="uid://chokwldaybr1q"]

[ext_resource type="Theme" uid="uid://dj76g6s63uffv" path="res://Theme/ShipTheme.tres" id="1_ovjf6"]
[ext_resource type="Texture2D" uid="uid://b5pyik2y2flah" path="res://Textures/paper02rough-2182474729.png" id="2_j4h6q"]
[ext_resource type="Script" uid="uid://bbebllg8wg7d3" path="res://UI/clipboard_1.gd" id="2_sil34"]
[ext_resource type="FontFile" uid="uid://c8812w6bu8xde" path="res://Theme/CoolingCartoon-8OXeB.otf" id="4_tadqx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -448.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ovjf6")
script = ExtResource("2_sil34")

[node name="Page2" type="TextureRect" parent="."]
modulate = Color(0.92, 0.8839667, 0.874, 1)
layout_mode = 0
offset_left = 21.0
offset_top = 7.5605717
offset_right = 331.0
offset_bottom = 419.9826
rotation = 0.016947456
texture = ExtResource("2_j4h6q")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Page2"]
layout_mode = 0
offset_left = 6.843712
offset_top = 7.3884335
offset_right = 307.74393
offset_bottom = 492.0083
theme_override_fonts/italics_font = ExtResource("4_tadqx")
bbcode_enabled = true
text = "[center][font_size=32]Cargo[/font_size][/center][br]
[table=2]
[cell border=#000000]Item[/cell][cell  border=#000000]Mass (Tonnes)[/cell] [cell border=#000000]Electronics [/cell] [cell  border=#000000]  1.2 [/cell] 
 [cell border=#000000]Nickel Alloys [/cell] [cell  border=#000000]  5.3 [/cell] 
 [cell border=#000000]Orange Juice Concentrate [/cell] [cell  border=#000000]  0.7  [/cell] 
 [cell border=#000000]Depleted Uranium [/cell] [cell  border=#000000]  4.1  [/cell] 
 [cell border=#000000]Earth Microbiota (Dried) [/cell] [cell  border=#000000]  0.1  [/cell] 
 [cell border=#000000]Soil (Mars Origin) [/cell] [cell  border=#000000]  7.7  [/cell] 
 [cell border=#000000]Tungsten Mining Drill [/cell] [cell  border=#000000]  8.1  [/cell]
 [cell border=#000000] Ammonia Ice [/cell] [cell  border=#000000]  2.1 [/cell]
 [cell border=#000000] Coffee (Synthetic) [/cell] [cell  border=#000000]  4.2 [/cell]
 [cell border=#000000] Dehydrated Meals [/cell] [cell  border=#000000]  3.9 [/cell]
 [cell border=#000000] Sulfur Dioxide [/cell] [cell  border=#000000]  11.4 [/cell]

[/table]
"

[node name="Prev" type="TextureButton" parent="Page2"]
modulate = Color(0.95, 0.931, 0.91199994, 1)
layout_mode = 0
offset_left = 3.6943588
offset_top = 397.77695
offset_right = 48.631126
offset_bottom = 412.3143
texture_normal = ExtResource("2_j4h6q")
ignore_texture_size = true
stretch_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Page2/Prev"]
layout_mode = 0
offset_top = -3.7434082
offset_right = 43.54721
offset_bottom = 24.461975
mouse_filter = 2
text = " <--"
scroll_active = false

[node name="Page1" type="TextureRect" parent="."]
modulate = Color(1, 0.95686275, 0.94509804, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 19.56057
offset_right = 323.0
offset_bottom = 431.9826
rotation = -0.082547165
texture = ExtResource("2_j4h6q")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Page1"]
layout_mode = 0
offset_left = 6.843712
offset_top = 7.3884335
offset_right = 307.74393
offset_bottom = 492.0083
theme_override_fonts/italics_font = ExtResource("4_tadqx")
bbcode_enabled = true
text = "[center][font_size=32]Ship Manifest[/font_size][/center][br]
[table=2]
[cell border=#000000]Registration Number:[/cell][cell  border=#000000] %s[/cell] [cell border=#000000] Pilot [/cell] [cell  border=#000000] [i]Deimos Debroglie [/i] [/cell] 
 [cell border=#000000] Origin [/cell] [cell  border=#000000] [i]  136199 Eris [/i] [/cell] 
 [cell border=#000000] Destination [/cell] [cell  border=#000000] [i]  50K Quâ€” [/i] [/cell] 
 [cell border=#000000] Gross Tonnage [/cell] [cell  border=#000000]  [/cell] 
 [cell border=#000000] Crew [/cell] [cell  border=#000000]                        1[/cell] 
 [cell border=#000000] Passengers [/cell] [cell  border=#000000]                        0[/cell] 
 [cell border=#000000] Authority [/cell] [cell  border=#000000] Martian Union[/cell] 
[/table]
"

[node name="Next" type="TextureButton" parent="Page1"]
modulate = Color(0.95, 0.931, 0.91199994, 1)
layout_mode = 0
offset_left = 256.05212
offset_top = 388.36176
offset_right = 300.98886
offset_bottom = 405.68192
texture_normal = ExtResource("2_j4h6q")
ignore_texture_size = true
stretch_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Page1/Next"]
layout_mode = 0
offset_right = 43.54721
offset_bottom = 24.461975
mouse_filter = 2
text = "    -->"
scroll_active = false

[connection signal="pressed" from="Page2/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Page1/Next" to="." method="_on_next_pressed"]
